# SDL_Game_AI

./: CMakeLists.txt  game-design.drawio  t.txt
include/: ball.h  commonFn.h  game.h
src/: ball.cpp  commonFn.cpp  game.cpp  main.cpp
